แก้ไขโปรแกรมเวอร์ชั่น2 ล่าสุด

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/bookstore_online.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mongo-java-driver-2.13.3.jar=../../../59160624/lib/mongo-java-driver-2.13.3.jar
+file.reference.mongo-java-driver-2.13.3.jar-1=C:\\Users\\MILK\\Downloads\\mongo-java-driver-2.13.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mongo-java-driver-2.13.3.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mongo-java-driver-2.13.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
